[package]
name = "dary_heap"
version = "0.3.1"
authors = ["Han Mertens <hanmertens@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A d-ary heap"
repository = "https://github.com/hanmertens/dary_heap"
readme = "README.md"
keywords = ["heap", "priority-queue", "no_std"]
categories = ["data-structures"]
include = ["build.rs", "CHANGELOG.md", "LICENSE-*", "README.md", "/src/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
unstable = []
unstable_nightly = []

[dependencies.serde]
version = "1"
default-features = false
features = ["alloc"]
optional = true

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
serde_test = "1"

[[bench]]
name = "dary_heap"
path = "benches/dary_heap.rs"
harness = false
