[package]
name = "dary_heap"
version = "0.2.6"
authors = ["Han Mertens <hanmertens@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A d-ary heap"
repository = "https://github.com/hanmertens/dary_heap"
readme = "README.md"
keywords = ["heap", "priority-queue", "no_std"]
categories = ["data-structures"]
include = ["build.rs", "CHANGELOG.md", "LICENSE-*", "README.md", "/src/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
unstable = []
unstable_nightly = []

[build-dependencies]
autocfg = "1"

[dependencies.serde]
version = "1"
default-features = false
features = ["alloc"]
optional = true

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
serde_test = "1"

[dev-dependencies.criterion]
version = "0.4"
default-features = false

[[bench]]
name = "dary_heap"
path = "benches/dary_heap.rs"
harness = false
